Bug 389575 - Add WARNINGS_AS_ERRORS compile time flag.  r=bsmedberg NPOTFB.
UltraBlame original commit: 4a2906ecb4c44c20886efe0683fd408f80de31ed

--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -211,7 +211,9 @@ MOZ_UPDATE_XTERM = @MOZ_UPDATE_XTERM@
 MOZ_MATHML = @MOZ_MATHML@
 MOZ_PERMISSIONS = @MOZ_PERMISSIONS@
 MOZ_XTF = @MOZ_XTF@
+MOZ_XMLEXTRAS = @MOZ_XMLEXTRAS@
 MOZ_NO_INSPECTOR_APIS = @MOZ_NO_INSPECTOR_APIS@
+MOZ_WEBSERVICES = @MOZ_WEBSERVICES@
 MOZ_SVG = @MOZ_SVG@
 MOZ_SVG_FOREIGNOBJECT = @MOZ_SVG_FOREIGNOBJECT@
 MOZ_LIBART_CFLAGS = @MOZ_LIBART_CFLAGS@
@@ -263,6 +265,8 @@ OS_COMPILE_CXXFLAGS = $(OS_CPPFLAGS) @COMPILE_CXXFLAGS@
 OS_INCLUDES	= $(NSPR_CFLAGS) $(JPEG_CFLAGS) $(PNG_CFLAGS) $(ZLIB_CFLAGS) $(LCMS_CFLAGS)
 OS_LIBS		= @LIBS@
 ACDEFINES	= @MOZ_DEFINES@
+
+WARNINGS_AS_ERRORS = @WARNINGS_AS_ERRORS@
 
 MOZ_OPTIMIZE	= @MOZ_OPTIMIZE@
 MOZ_OPTIMIZE_FLAGS = @MOZ_OPTIMIZE_FLAGS@
