--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -211,7 +211,9 @@ MOZ_UPDATE_XTERM = @MOZ_UPDATE_XTERM@
 MOZ_MATHML = @MOZ_MATHML@
 MOZ_PERMISSIONS = @MOZ_PERMISSIONS@
 MOZ_XTF = @MOZ_XTF@
+MOZ_XMLEXTRAS = @MOZ_XMLEXTRAS@
 MOZ_NO_INSPECTOR_APIS = @MOZ_NO_INSPECTOR_APIS@
+MOZ_WEBSERVICES = @MOZ_WEBSERVICES@
 MOZ_SVG = @MOZ_SVG@
 MOZ_SVG_FOREIGNOBJECT = @MOZ_SVG_FOREIGNOBJECT@
 MOZ_LIBART_CFLAGS = @MOZ_LIBART_CFLAGS@
@@ -596,3 +598,5 @@ MOZ_V1_STRING_ABI = @MOZ_V1_STRING_ABI@
 MOZ_EMBEDDING_LEVEL_DEFAULT = @MOZ_EMBEDDING_LEVEL_DEFAULT@
 MOZ_EMBEDDING_LEVEL_BASIC = @MOZ_EMBEDDING_LEVEL_BASIC@
 MOZ_EMBEDDING_LEVEL_MINIMAL = @MOZ_EMBEDDING_LEVEL_MINIMAL@
+
+relativesrcdir = $(subst $(topsrcdir)/,,$(srcdir))
