--- a/configure.in
+++ b/configure.in
@@ -4103,7 +4103,7 @@ MOZ_BRANDING_DIRECTORY=
 MOZ_CALENDAR=
 MOZ_DBGRINFO_MODULES=
 MOZ_ENABLE_CANVAS=1
-MOZ_EXTENSIONS_ALL=" wallet help p3p venkman inspector irc typeaheadfind gnomevfs sroaming datetime finger cview layout-debug tasks sql xforms schema-validation reporter"
+MOZ_EXTENSIONS_ALL=" wallet xml-rpc help venkman inspector irc typeaheadfind gnomevfs sroaming datetime finger cview layout-debug tasks sql xforms schema-validation reporter"
 MOZ_FEEDS=1
 MOZ_IMG_DECODERS_DEFAULT="png gif jpeg bmp xbm icon"
 MOZ_IMG_ENCODERS_DEFAULT="png jpeg"
@@ -4156,12 +4156,15 @@ MOZ_URL_CLASSIFIER=
 MOZ_USE_NATIVE_UCONV=
 MOZ_V1_STRING_ABI=
 MOZ_VIEW_SOURCE=1
+MOZ_WEBSERVICES=
+MOZ_XMLEXTRAS=1
 MOZ_XPFE_COMPONENTS=1
 MOZ_XPINSTALL=1
 MOZ_XSLT_STANDALONE=
 MOZ_XTF=1
 MOZ_XUL=1
 MOZ_XUL_APP=1
+MOZ_ZIPWRITER=1
 NS_PRINTING=1
 NECKO_COOKIES=1
 NECKO_DISK_CACHE=1
@@ -4279,6 +4282,7 @@ basic)
   MOZ_XPFE_COMPONENTS=
   MOZ_XPINSTALL=
   MOZ_XTF=
+  MOZ_ZIPWRITER=
   NECKO_DISK_CACHE=
   NECKO_PROTOCOLS_DEFAULT="about data http file res"
   NECKO_SMALL_BUFFERS=1
@@ -4329,6 +4333,7 @@ minimal)
   MOZ_XPINSTALL=
   MOZ_XTF=
   MOZ_XUL=
+  MOZ_ZIPWRITER=
   MOZ_RDF=
   NECKO_DISK_CACHE=
   NECKO_PROTOCOLS_DEFAULT="about data http file res"
@@ -5253,6 +5258,22 @@ MOZ_ARG_DISABLE_BOOL(inspector-apis,
     MOZ_NO_INSPECTOR_APIS= )
 
 dnl ========================================================
+dnl XMLExtras
+dnl ========================================================
+MOZ_ARG_DISABLE_BOOL(xmlextras,
+[  --disable-xmlextras Disable XMLExtras such as XPointer support ],
+    MOZ_XMLEXTRAS=,
+    MOZ_XMLEXTRAS=1 )
+
+dnl ========================================================
+dnl Webservices
+dnl ========================================================
+MOZ_ARG_ENABLE_BOOL(webservices,
+[  --enable-webservices Enable Webservices/SOAP support ],
+    MOZ_WEBSERVICES=1,
+    MOZ_WEBSERVICES= )
+
+dnl ========================================================
 dnl Pref extensions (autoconfig and system-pref)
 dnl ========================================================
 MOZ_ARG_DISABLE_BOOL(pref-extensions,
@@ -5453,9 +5474,19 @@ if test `echo "$MOZ_EXTENSIONS" | grep -c auth` -ne 0; then
     MOZ_EXTENSIONS=`echo $MOZ_EXTENSIONS | sed -e 's|auth||g'`
 fi
 
+if test `echo "$MOZ_EXTENSIONS" | grep -c xmlextras` -ne 0; then
+    AC_MSG_WARN([xmlextras is no longer an extension, use --disable-xmlextras to disable.])
+    MOZ_EXTENSIONS=`echo $MOZ_EXTENSIONS | sed -e 's|xmlextras||g'`
+fi
+
 if test `echo "$MOZ_EXTENSIONS" | grep -c 'cookie\|permissions'` -ne 0; then
     AC_MSG_WARN([cookie and permissions are no longer extensions, use --disable-permissions to disable.])
     MOZ_EXTENSIONS=`echo $MOZ_EXTENSIONS | sed -e 's|cookie||g; s|permissions||g'`
+fi
+
+if test `echo "$MOZ_EXTENSIONS" | grep -c webservices` -ne 0; then
+    AC_MSG_WARN([webservices is no longer an extension, use --disable-webservices to disable.])
+    MOZ_EXTENSIONS=`echo $MOZ_EXTENSIONS | sed -e 's|webservices||g'`
 fi
 
 if test `echo "$MOZ_EXTENSIONS" | grep -c pref` -ne 0; then
@@ -5874,6 +5905,15 @@ if test -n "$MOZ_URL_CLASSIFIER"; then
     AC_DEFINE(MOZ_URL_CLASSIFIER)
 fi
 AC_SUBST(MOZ_URL_CLASSIFIER)
+
+dnl ========================================================
+dnl = Disable zipwriter
+dnl ========================================================
+MOZ_ARG_DISABLE_BOOL(zipwriter,
+[  --disable-zipwriter             Disable zipwriter component],
+    MOZ_ZIPWRITER=,
+    MOZ_ZIPWRITER=1 )
+AC_SUBST(MOZ_ZIPWRITER)
 
 dnl ========================================================
 dnl = Enable Ultrasparc specific optimizations for JS
@@ -7418,7 +7458,9 @@ AC_SUBST(MOZ_AUTH_EXTENSION)
 AC_SUBST(MOZ_MATHML)
 AC_SUBST(MOZ_PERMISSIONS)
 AC_SUBST(MOZ_XTF)
+AC_SUBST(MOZ_XMLEXTRAS)
 AC_SUBST(MOZ_NO_INSPECTOR_APIS)
+AC_SUBST(MOZ_WEBSERVICES)
 AC_SUBST(MOZ_PREF_EXTENSIONS)
 AC_SUBST(MOZ_SVG)
 AC_SUBST(MOZ_SVG_FOREIGNOBJECT)
