--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -212,7 +212,9 @@ MOZ_UPDATE_XTERM = @MOZ_UPDATE_XTERM@
 MOZ_MATHML = @MOZ_MATHML@
 MOZ_PERMISSIONS = @MOZ_PERMISSIONS@
 MOZ_XTF = @MOZ_XTF@
+MOZ_XMLEXTRAS = @MOZ_XMLEXTRAS@
 MOZ_NO_INSPECTOR_APIS = @MOZ_NO_INSPECTOR_APIS@
+MOZ_WEBSERVICES = @MOZ_WEBSERVICES@
 MOZ_SVG = @MOZ_SVG@
 MOZ_SVG_FOREIGNOBJECT = @MOZ_SVG_FOREIGNOBJECT@
 MOZ_LIBART_CFLAGS = @MOZ_LIBART_CFLAGS@
@@ -477,7 +479,6 @@ MOZ_DBUS_GLIB_CFLAGS    = @MOZ_DBUS_GLIB_CFLAGS@
 MOZ_DBUS_GLIB_LIBS      = @MOZ_DBUS_GLIB_LIBS@
 MOZ_ENABLE_DBUS         = @MOZ_ENABLE_DBUS@
 
-MOZ_ENABLE_FREETYPE2   = @MOZ_ENABLE_FREETYPE2@
 FT2_CFLAGS             = @FT2_CFLAGS@
 FT2_LIBS               = @FT2_LIBS@
 
