--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -212,7 +212,9 @@ MOZ_UPDATE_XTERM = @MOZ_UPDATE_XTERM@
 MOZ_MATHML = @MOZ_MATHML@
 MOZ_PERMISSIONS = @MOZ_PERMISSIONS@
 MOZ_XTF = @MOZ_XTF@
+MOZ_XMLEXTRAS = @MOZ_XMLEXTRAS@
 MOZ_NO_INSPECTOR_APIS = @MOZ_NO_INSPECTOR_APIS@
+MOZ_WEBSERVICES = @MOZ_WEBSERVICES@
 MOZ_SVG = @MOZ_SVG@
 MOZ_SVG_FOREIGNOBJECT = @MOZ_SVG_FOREIGNOBJECT@
 MOZ_LIBART_CFLAGS = @MOZ_LIBART_CFLAGS@
@@ -587,6 +589,7 @@ GCC_VERSION	= @GCC_VERSION@
 XCODEBUILD_VERSION= @XCODEBUILD_VERSION@
 HAS_XCODE_2_1	= @HAS_XCODE_2_1@
 UNIVERSAL_BINARY= @UNIVERSAL_BINARY@
+HAVE_DTRACE= @HAVE_DTRACE@
 
 VISIBILITY_FLAGS = @VISIBILITY_FLAGS@
 WRAP_SYSTEM_INCLUDES = @WRAP_SYSTEM_INCLUDES@
