--- a/configure.in
+++ b/configure.in
@@ -2857,6 +2857,12 @@ case $target in
         AC_DEFINE(HAVE_LIBDL)))
     ;;
 esac
+
+_SAVE_CFLAGS="$CFLAGS"
+CFLAGS="$CFLAGS -D_GNU_SOURCE"
+AC_CHECK_FUNCS(dladdr)
+CFLAGS="$_SAVE_CFLAGS"
+
 if test ! "$GNU_CXX"; then
 
     case $target in
@@ -4117,7 +4123,7 @@ MOZ_BRANDING_DIRECTORY=
 MOZ_CALENDAR=
 MOZ_DBGRINFO_MODULES=
 MOZ_ENABLE_CANVAS=1
-MOZ_EXTENSIONS_ALL=" wallet p3p venkman inspector irc typeaheadfind gnomevfs sroaming datetime finger cview layout-debug tasks sql xforms schema-validation reporter"
+MOZ_EXTENSIONS_ALL=" wallet xml-rpc venkman inspector irc typeaheadfind gnomevfs sroaming datetime finger cview layout-debug tasks sql xforms schema-validation reporter"
 MOZ_FEEDS=1
 MOZ_IMG_DECODERS_DEFAULT="png gif jpeg bmp xbm icon"
 MOZ_IMG_ENCODERS_DEFAULT="png jpeg"
@@ -4138,7 +4144,7 @@ MOZ_NO_ACTIVEX_SUPPORT=1
 MOZ_NO_INSPECTOR_APIS=
 MOZ_NO_XPCOM_OBSOLETE=
 MOZ_NO_FAST_LOAD=
-MOZ_OJI=
+MOZ_OJI=1
 MOZ_PERMISSIONS=1
 MOZ_PLACES=
 MOZ_PLAINTEXT_EDITOR_ONLY=
@@ -4170,6 +4176,8 @@ MOZ_URL_CLASSIFIER=
 MOZ_USE_NATIVE_UCONV=
 MOZ_V1_STRING_ABI=
 MOZ_VIEW_SOURCE=1
+MOZ_WEBSERVICES=
+MOZ_XMLEXTRAS=1
 MOZ_XPFE_COMPONENTS=1
 MOZ_XPINSTALL=1
 MOZ_XSLT_STANDALONE=
@@ -5061,10 +5069,10 @@ MOZ_ARG_DISABLE_BOOL(plugins,
 dnl ========================================================
 dnl = Open JVM Interface (OJI) support
 dnl ========================================================
-MOZ_ARG_ENABLE_BOOL(oji,
-[  --enable-oji           Enable Open JVM Integration support],
-    MOZ_OJI=1,
-    MOZ_OJI=)
+MOZ_ARG_DISABLE_BOOL(oji,
+[  --disable-oji           Disable Open JVM Integration support],
+    MOZ_OJI=,
+    MOZ_OJI=1)
 if test -n "$MOZ_OJI"; then
     AC_DEFINE(OJI)
 fi
@@ -5248,6 +5256,22 @@ MOZ_ARG_DISABLE_BOOL(inspector-apis,
 [  --disable-inspector-apis Disable the DOM inspection APIs ],
     MOZ_NO_INSPECTOR_APIS=1,
     MOZ_NO_INSPECTOR_APIS= )
+
+dnl ========================================================
+dnl XMLExtras
+dnl ========================================================
+MOZ_ARG_DISABLE_BOOL(xmlextras,
+[  --disable-xmlextras Disable XMLExtras such as XPointer support ],
+    MOZ_XMLEXTRAS=,
+    MOZ_XMLEXTRAS=1 )
+
+dnl ========================================================
+dnl Webservices
+dnl ========================================================
+MOZ_ARG_ENABLE_BOOL(webservices,
+[  --enable-webservices Enable Webservices/SOAP support ],
+    MOZ_WEBSERVICES=1,
+    MOZ_WEBSERVICES= )
 
 dnl ========================================================
 dnl Pref extensions (autoconfig and system-pref)
@@ -5445,9 +5469,19 @@ if test `echo "$MOZ_EXTENSIONS" | grep -c auth` -ne 0; then
     MOZ_EXTENSIONS=`echo $MOZ_EXTENSIONS | sed -e 's|auth||g'`
 fi
 
+if test `echo "$MOZ_EXTENSIONS" | grep -c xmlextras` -ne 0; then
+    AC_MSG_WARN([xmlextras is no longer an extension, use --disable-xmlextras to disable.])
+    MOZ_EXTENSIONS=`echo $MOZ_EXTENSIONS | sed -e 's|xmlextras||g'`
+fi
+
 if test `echo "$MOZ_EXTENSIONS" | grep -c 'cookie\|permissions'` -ne 0; then
     AC_MSG_WARN([cookie and permissions are no longer extensions, use --disable-permissions to disable.])
     MOZ_EXTENSIONS=`echo $MOZ_EXTENSIONS | sed -e 's|cookie||g; s|permissions||g'`
+fi
+
+if test `echo "$MOZ_EXTENSIONS" | grep -c webservices` -ne 0; then
+    AC_MSG_WARN([webservices is no longer an extension, use --disable-webservices to disable.])
+    MOZ_EXTENSIONS=`echo $MOZ_EXTENSIONS | sed -e 's|webservices||g'`
 fi
 
 if test `echo "$MOZ_EXTENSIONS" | grep -c pref` -ne 0; then
@@ -6332,6 +6366,12 @@ if test "$HAVE_DEMANGLE" -a "$HAVE_GCC3_ABI" && test "$MOZ_DEBUG" -o "$NS_TRACE_
 fi
 AC_SUBST(MOZ_DEMANGLE_SYMBOLS)
 
+dnl ========================================================
+dnl = Support for gcc stack unwinding (from gcc 3.3)
+dnl ========================================================
+if test "$HAVE_GCC3_ABI" && test -z "$SKIP_LIBRARY_CHECKS"; then
+    AC_CHECK_FUNCS(_Unwind_Backtrace)
+fi
 
 dnl ========================================================
 dnl =
@@ -7419,7 +7459,9 @@ AC_SUBST(MOZ_AUTH_EXTENSION)
 AC_SUBST(MOZ_MATHML)
 AC_SUBST(MOZ_PERMISSIONS)
 AC_SUBST(MOZ_XTF)
+AC_SUBST(MOZ_XMLEXTRAS)
 AC_SUBST(MOZ_NO_INSPECTOR_APIS)
+AC_SUBST(MOZ_WEBSERVICES)
 AC_SUBST(MOZ_PREF_EXTENSIONS)
 AC_SUBST(MOZ_SVG)
 AC_SUBST(MOZ_SVG_FOREIGNOBJECT)
