Bug 762617 - Install URL classifier components when MOZ_URL_CLASSIFIER is set. r=khuey
UltraBlame original commit: 03098cbeb2ba788908a1019d35f56eb3c94d3fdc

--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -24,9 +24,7 @@
 @APPNAME@/Contents/Info.plist
 @APPNAME@/Contents/PkgInfo
 @APPNAME@/Contents/Resources/
-#ifdef MOZ_SIGNING
 @APPNAME@/Contents/_CodeSignature/CodeResources
-#endif
 #endif
 
 [@AB_CD@]
@@ -469,6 +467,8 @@
 #ifdef MOZ_SAFE_BROWSING
 @BINPATH@/components/nsSafebrowsingApplication.manifest
 @BINPATH@/components/nsSafebrowsingApplication.js
+#endif
+#ifdef MOZ_URL_CLASSIFIER
 @BINPATH@/components/nsURLClassifier.manifest
 @BINPATH@/components/nsUrlClassifierHashCompleter.js
 @BINPATH@/components/nsUrlClassifierListManager.js
