Bug 761772.  Add support for 'implements' in WebIDL.  r=khuey
UltraBlame original commit: 8c2a635f4a26f1e6266cbaa95ce10d85e1f5c284

--- a/dom/bindings/Makefile.in
+++ b/dom/bindings/Makefile.in
@@ -64,6 +64,7 @@ EXPORTS_$(binding_include_path) = \
   PrototypeList.h \
   RegisterBindings.h \
   Nullable.h \
+  PrimitiveConversions.h \
   TypedArray.h \
   BindingUtils.h \
   $(exported_binding_headers) \
@@ -82,6 +83,7 @@ bindinggen_dependencies := \
   Bindings.conf \
   Configuration.py \
   Codegen.py \
+  parser/WebIDL.py \
   ParserResults.pkl \
   $(GLOBAL_DEPS) \
   $(NULL)
@@ -119,6 +121,7 @@ globalgen_dependencies := \
   Bindings.conf \
   Configuration.py \
   Codegen.py \
+  parser/WebIDL.py \
   $(CACHE_DIR)/.done \
   $(GLOBAL_DEPS) \
   $(NULL)
