--- a/dom/bindings/test/Makefile.in
+++ b/dom/bindings/test/Makefile.in
@@ -31,7 +31,6 @@ CPPSRCS := $(subst .webidl,Binding.cpp,$(test_webidl_files))
 LOCAL_INCLUDES += \
   -I$(topsrcdir)/js/xpconnect/src \
   -I$(topsrcdir)/js/xpconnect/wrappers \
-  -I$(topsrcdir)/dom/bindings \
   $(NULL)
 
 include $(topsrcdir)/config/rules.mk
@@ -44,6 +43,7 @@ bindinggen_dependencies := \
   ../Bindings.conf \
   ../Configuration.py \
   ../Codegen.py \
+  ../parser/WebIDL.py \
   ../ParserResults.pkl \
   ../Makefile \
   $(GLOBAL_DEPS) \
