--- a/content/events/src/Makefile.in
+++ b/content/events/src/Makefile.in
@@ -4,6 +4,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 include $(topsrcdir)/config/rules.mk
+include $(topsrcdir)/ipc/chromium/chromium-config.mk
 
 LOCAL_INCLUDES	+= \
              -I$(srcdir)/../../base/src \
@@ -18,7 +19,7 @@ LOCAL_INCLUDES	+= \
              -I$(srcdir)/../../../layout/xul/tree/ \
              $(NULL)
 
-ifdef MOZ_B2G_RIL
+ifeq (gonk,$(MOZ_WIDGET_TOOLKIT))
 LOCAL_INCLUDES += \
               -I$(srcdir)/../../../dom/wifi \
               $(NULL)
