Backed out changeset 635f44f65840 (bug 925185)
UltraBlame original commit: 7f4e3bf3de5c49a68ffd911ffbc48c917309f594

--- a/mobile/android/base/Makefile.in
+++ b/mobile/android/base/Makefile.in
@@ -4,6 +4,8 @@
 
 DIST_FILES = package-name.txt
 
+include $(topsrcdir)/mobile/android/base/android-services-files.mk
+
 ifdef MOZ_ANDROID_ANR_REPORTER
 DEFINES += -DMOZ_ANDROID_ANR_REPORTER=1
 endif
