--- a/configure.in
+++ b/configure.in
@@ -234,8 +234,7 @@ if test -n "$gonkdir" ; then
           GONK_INCLUDES="$GONK_INCLUDES -I$gonkdir/external/dbus -I$gonkdir/external/bluetooth/bluez/lib"
             MOZ_B2G_BT=1
             MOZ_B2G_BT_BLUEZ=1
-        fi
-        if test -d "$gonkdir/external/bluetooth/bluedroid"; then
+        elif test -d "$gonkdir/external/bluetooth/bluedroid"; then
             MOZ_B2G_BT=1
             MOZ_B2G_BT_BLUEDROID=1
         fi
