--- a/toolkit/components/osfile/tests/xpcshell/xpcshell.ini
+++ b/toolkit/components/osfile/tests/xpcshell/xpcshell.ini
@@ -5,6 +5,7 @@ tail =
 [test_osfile_closed.js]
 [test_path.js]
 [test_osfile_async.js]
+[test_osfile_async_append.js]
 [test_osfile_async_bytes.js]
 [test_osfile_async_copy.js]
 [test_profiledir.js]
