--- a/toolkit/components/osfile/tests/xpcshell/xpcshell.ini
+++ b/toolkit/components/osfile/tests/xpcshell/xpcshell.ini
@@ -8,6 +8,7 @@ tail =
 [test_osfile_async_append.js]
 [test_osfile_async_bytes.js]
 [test_osfile_async_copy.js]
+[test_osfile_async_flush.js]
 [test_profiledir.js]
 [test_logging.js]
 [test_creationDate.js]
