Bug 922756 - Build config for Chromium sandbox. r=bsmedberg
UltraBlame original commit: f00c0b788fd7d2dc0fa4fafe56662d6860c6679b

--- a/security/sandbox/Makefile.in
+++ b/security/sandbox/Makefile.in
@@ -2,5 +2,17 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+ifeq ($(OS_ARCH),WINNT)
+LOCAL_INCLUDES += \
+    -I$(topsrcdir)/security/sandbox/base/shim \
+    -I$(topsrcdir)/security \
+    -I$(topsrcdir)/nsprpub \
+    $(NULL)
+
+DEFINES += -DUNICODE -D_UNICODE -DNS_NO_XPCOM -DSANDBOX_EXPORTS -DNOMINMAX -D_CRT_RAND_S
+
+STL_FLAGS =
+MOZ_GLUE_LDFLAGS =
+endif
 
 include $(topsrcdir)/config/rules.mk
