--- a/mobile/android/base/AndroidManifest.xml.in
+++ b/mobile/android/base/AndroidManifest.xml.in
@@ -82,26 +82,12 @@
 		 android:debuggable="true">
 #endif
 
-        <activity android:name="org.mozilla.gecko.BrowserApp"
+        <activity android:name=".App"
                   android:label="@MOZ_APP_DISPLAYNAME@"
                   android:configChanges="keyboard|keyboardHidden|mcc|mnc|orientation|screenSize"
                   android:windowSoftInputMode="stateUnspecified|adjustResize"
                   android:launchMode="singleTask"
                   android:theme="@style/Gecko.App">
-        </activity>
-
-        <!-- Fennec is shipped as the Android package named
-             org.mozilla.{fennec,firefox,firefox_beta}.  The internal Java
-             package hierarchy inside the Android package has both an
-             org.mozilla.{fennec,firefox,firefox_beta} subtree *and* an
-             org.mozilla.gecko subtree.  The non-org.mozilla.gecko is
-             deprecated and we would like to get rid of it entirely.  Until
-             that happens, we have external consumers (such as intents and
-             bookmarks) of non-org.mozilla.gecko Activity classes, so we define
-             activity aliases for backwards compatibility. -->
-        <activity-alias android:name=".App"
-                        android:label="@MOZ_APP_DISPLAYNAME@"
-                        android:targetActivity="org.mozilla.gecko.BrowserApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -167,10 +153,9 @@
                 <action android:name="org.mozilla.gecko.DEBUG" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </activity-alias>
+        </activity>
 
-        <!-- Activity used for launching non-privileged WebApps via a URL -->
-        <activity android:name="org.mozilla.gecko.WebApp"
+        <activity android:name=".WebApp"
                   android:label="@string/webapp_generic_name"
                   android:configChanges="keyboard|keyboardHidden|mcc|mnc|orientation|screenSize"
                   android:windowSoftInputMode="stateUnspecified|adjustResize"
@@ -179,20 +164,13 @@
                   android:process=":@ANDROID_PACKAGE_NAME@.WebApp"
                   android:excludeFromRecents="true"
                   android:theme="@style/Gecko.App">
-        </activity>
-
-        <!-- Alias WebApp so we can launch it from the package namespace. See
-             .App alias comment for more details. -->
-        <activity-alias android:name=".WebApp"
-                        android:label="@string/webapp_generic_name"
-                        android:targetActivity="org.mozilla.gecko.WebApp">
             <intent-filter>
                 <action android:name="org.mozilla.gecko.WEBAPP" />
             </intent-filter>
             <intent-filter>
                 <action android:name="org.mozilla.gecko.ACTION_ALERT_CALLBACK" />
             </intent-filter>
-        </activity-alias>
+        </activity>
 
         <!-- Declare a predefined number of WebApp<num> activities. These are
              used so that each web app can launch in its own process. Keep
@@ -205,7 +183,7 @@
         <!-- Masquerade as the Resolver so that we can be opened from the Marketplace. -->
         <activity-alias
             android:name="com.android.internal.app.ResolverActivity"
-            android:targetActivity="org.mozilla.gecko.BrowserApp"
+            android:targetActivity=".App"
             android:exported="true" />
 
         <receiver android:name="org.mozilla.gecko.GeckoUpdateReceiver">
