--- a/mobile/android/base/App.java.in
+++ b/mobile/android/base/App.java.in
@@ -6,12 +6,10 @@
 #filter substitution
 package @ANDROID_PACKAGE_NAME@;
 
+import org.mozilla.gecko.BrowserApp;
+
 /**
- * Declare a predefined number of WebApp<num> classes to the WebApps class.
- * These are used so that each web app can launch in its own process. Keep this
- * number in sync with the number of web apps handled in WebAppAllocator.
+ * This class serves only as a namespace wrapper for BrowserApp.
  */
-public final class WebApps {
-#define FRAGMENT WebAppsFragment.java.frag
-#include WebAppFragmentRepeater.inc
-}
+public class App extends BrowserApp {}
+
