--- a/mobile/android/base/WebApps.java.in
+++ b/mobile/android/base/WebApps.java.in
@@ -4,7 +4,7 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 #filter substitution
-package @ANDROID_PACKAGE_NAME@;
+package org.mozilla.gecko;
 
 /**
  * Declare a predefined number of WebApp<num> classes to the WebApps class.
