Bug 926544 - content/base/test/test_bug578096.html needs to create file in the chrome process. r=jgriffin
UltraBlame original commit: 25fd9e87b379a4be727848a1b934b5096b603442

--- a/content/base/test/mochitest.ini
+++ b/content/base/test/mochitest.ini
@@ -33,6 +33,7 @@ support-files =
   bug475156.sjs
   bug482935.sjs
   bug540854.sjs
+  bug578096LoadChromeScript.js
   bug638112-response.txt
   bug638112.sjs
   bug682592-subframe-ref.html
