Bug 819900 - File constructor. r=sicking
UltraBlame original commit: 9640f9fda7335686a84b926bdfde10019401078c

--- a/content/base/test/mochitest.ini
+++ b/content/base/test/mochitest.ini
@@ -576,3 +576,4 @@ support-files =
 [test_xhr_progressevents.html]
 [test_xhr_send_readystate.html]
 [test_xhr_withCredentials.html]
+[test_file_from_blob.html]
