Bug 932280 - [Qt] Move moc_ files to Makefile.in in order to pass existance check for autogenerated files. r=Ms2ger
UltraBlame original commit: 4a21dc77dad9de531cb2e67dccb853d71561f151

--- a/dom/plugins/ipc/Makefile.in
+++ b/dom/plugins/ipc/Makefile.in
@@ -8,6 +8,12 @@ DEFINES += \
   $(NULL)
 endif
 
+ifdef MOZ_ENABLE_QT
+CPPSRCS += \
+  moc_NestedLoopTimer.cpp \
+  $(NULL)
+endif
+
 LOCAL_INCLUDES = \
   -I$(srcdir)/../base \
   -I$(topsrcdir)/xpcom/base/ \
