--- a/ipc/chromium/Makefile.in
+++ b/ipc/chromium/Makefile.in
@@ -102,6 +102,12 @@ endif # }
 
 OS_CXXFLAGS += $(TK_CFLAGS)
 
+ifdef MOZ_ENABLE_QT
+CPPSRCS += \
+  moc_message_pump_qt.cc \
+  $(NULL)
+endif
+
 include $(topsrcdir)/config/rules.mk
 
 ifdef MOZ_NATIVE_LIBEVENT # {
