--- a/widget/qt/faststartupqt/Makefile.in
+++ b/widget/qt/faststartupqt/Makefile.in
@@ -11,6 +11,11 @@ EXTRA_DSO_LDOPTS = \
 	$(MOZ_QT_LIBS) \
 	$(NULL)
 
+CPPSRCS += \
+	moc_moziqwidget.cpp \
+	moc_nsFastStartupQt.cpp \
+	$(NULL)
+
 LOCAL_INCLUDES += \
 	-I$(topsrcdir)/xpcom/build \
 	-I$(topsrcdir)/widget/qt \
@@ -19,9 +24,7 @@ LOCAL_INCLUDES += \
 EXPORT_SOURCES = \
 	$(topsrcdir)/widget/qt/moziqwidget.h \
 	$(topsrcdir)/toolkit/xre/nsQAppInstance.h \
-	$(topsrcdir)/toolkit/xre/nsQAppInstance.cpp \
-	$(topsrcdir)/widget/qt/mozqglwidgetwrapper.h \
-	$(topsrcdir)/widget/qt/mozqglwidgetwrapper.cpp
+	$(topsrcdir)/widget/qt/mozqglwidgetwrapper.h
 
 GARBAGE += $(EXPORT_SOURCES)
 export:: $(EXPORT_SOURCES)
