Backed out changeset 4a21dc77dad9 (bug 932280) for inexplicably breaking win7debug browser-chrome tests on a CLOSED TREE
UltraBlame original commit: 6c06b499bb16ac70e5bde08458554f2e2db15d65

--- a/widget/qt/faststartupqt/Makefile.in
+++ b/widget/qt/faststartupqt/Makefile.in
@@ -11,11 +11,6 @@ EXTRA_DSO_LDOPTS = \
 	$(MOZ_QT_LIBS) \
 	$(NULL)
 
-CPPSRCS += \
-	moc_moziqwidget.cpp \
-	moc_nsFastStartupQt.cpp \
-	$(NULL)
-
 LOCAL_INCLUDES += \
 	-I$(topsrcdir)/xpcom/build \
 	-I$(topsrcdir)/widget/qt \
@@ -24,7 +19,9 @@ LOCAL_INCLUDES += \
 EXPORT_SOURCES = \
 	$(topsrcdir)/widget/qt/moziqwidget.h \
 	$(topsrcdir)/toolkit/xre/nsQAppInstance.h \
-	$(topsrcdir)/widget/qt/mozqglwidgetwrapper.h
+	$(topsrcdir)/toolkit/xre/nsQAppInstance.cpp \
+	$(topsrcdir)/widget/qt/mozqglwidgetwrapper.h \
+	$(topsrcdir)/widget/qt/mozqglwidgetwrapper.cpp
 
 GARBAGE += $(EXPORT_SOURCES)
 export:: $(EXPORT_SOURCES)
