--- a/media/libvpx/Makefile.in
+++ b/media/libvpx/Makefile.in
@@ -407,7 +407,7 @@ ifdef VPX_NEED_OBJ_INT_EXTRACT
 
 # only for MSVC
 ifdef _MSC_VER
-asm_com_offsets.$(OBJ_SUFFIX): CFLAGS += -GL-
+NO_PROFILE_GUIDED_OPTIMIZE := asm_com_offsets.c
 endif
 
 asm_com_offsets.asm: asm_com_offsets.$(OBJ_SUFFIX) $(HOST_PROGRAM)
@@ -421,7 +421,7 @@ OBJS := $(filter-out asm_com_offsets.$(OBJ_SUFFIX),$(OBJS))
 ifdef MOZ_VP8_ENCODER
 
 ifdef _MSC_VER
-asm_enc_offsets.$(OBJ_SUFFIX): CFLAGS += -GL-
+NO_PROFILE_GUIDED_OPTIMIZE += asm_enc_offsets.c
 endif
 
 asm_enc_offsets.asm: asm_enc_offsets.$(OBJ_SUFFIX) $(HOST_PROGRAM)
