Bug 930202 - New session restore tests (r=ttaubert)
UltraBlame original commit: 6e895ec637444e4efda2579f7ae8603f14e7fc79

--- a/browser/components/sessionstore/test/browser.ini
+++ b/browser/components/sessionstore/test/browser.ini
@@ -153,6 +153,7 @@ skip-if = true
 [browser_819510_perwindowpb.js]
 [browser_833286_atomic_backup.js]
 [browser_916390_form_data_loss.js]
+[browser_restore_during_async_collect.js]
 
 # Disabled for frequent intermittent failures
 [browser_464620_a.js]
