Bug 925531: Worker URL harmonization. r=bent
UltraBlame original commit: 092df4b7af995cc635a0a7fd8d638cd7cb44a2cc

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -1254,12 +1254,12 @@ DOMInterfaces = {
 },
 
 'URL' : [{
-    'wrapperCache' : False,
-    'nativeOwnership': 'refcounted',
+    'wrapperCache': False,
 },
 {
     'workers': True,
-    'nativeOwnership': 'worker',
+    'wrapperCache': False,
+    'nativeOwnership': 'owned',
 }],
 
 'VTTCue': {
