Bug 928312: Convert the worker global object and all remaining EventTargets to new DOM bindings. r=bent,peterv,smaug
UltraBlame original commit: 2e66e700722394f2329aace31a28f0d4f9b8cea5

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -280,6 +280,11 @@ DOMInterfaces = {
     'nativeType': 'nsDOMDataContainerEvent',
 },
 
+'DedicatedWorkerGlobalScope': {
+    'headerFile': 'mozilla/dom/WorkerScope.h',
+    'workers': True,
+},
+
 'DelayNode': [
 {
     'resultNotAddRefed': [ 'delayTime' ],
@@ -365,38 +370,15 @@ DOMInterfaces = {
     ]
 },
 
-'Event': [
-{
+'Event': {
     'nativeType': 'nsDOMEvent',
 },
-{
-    'nativeType': 'JSObject',
-    'workers': True,
-    'skipGen': True
-}],
 
-'EventListener': [
-{
-    'workers': True,
-}],
-
-'EventTarget': [
-{
+'EventTarget': {
     'hasXPConnectImpls': True,
     'concrete': False,
     'jsImplParent': 'nsDOMEventTargetHelper'
 },
-{
-    'workers': True,
-    'nativeOwnership': 'worker',
-    'concrete': False,
-    # XXXkhuey ownerGlobal returns WindowProxy? which boils down to a JSObject*
-    # on a worker, and nsRefPtr<JSObject> fails in the expected way.  This is
-    # ugly but it's all going away soon anyways.
-    'resultNotAddRefed': [
-        'ownerGlobal'
-    ]
-}],
 
 'Exception': {
     'headerFile': 'mozilla/dom/DOMException.h',
@@ -745,6 +727,14 @@ DOMInterfaces = {
     'nativeType': 'nsDOMMessageEvent',
 },
 
+'MessagePort': {
+    'nativeType': 'mozilla::dom::MessagePortBase',
+    'headerFile': 'mozilla/dom/MessagePort.h',
+    'binaryNames': {
+        'postMessage': 'postMessageMoz',
+    },
+},
+
 'MimeType': {
     'headerFile' : 'nsMimeTypeArray.h',
     'nativeType': 'nsMimeType',
@@ -952,6 +942,11 @@ DOMInterfaces = {
     'nativeType': 'mozilla::dom::workers::SharedWorker',
     'headerFile': 'mozilla/dom/workers/bindings/SharedWorker.h',
     'implicitJSContext': [ 'constructor' ],
+},
+
+'SharedWorkerGlobalScope': {
+    'headerFile': 'mozilla/dom/WorkerScope.h',
+    'workers': True,
 },
 
 'SimpleGestureEvent': {
@@ -1463,28 +1458,19 @@ DOMInterfaces = {
     'customWrapperManagement': True,
 },
 
+'WorkerGlobalScope': {
+    'headerFile': 'mozilla/dom/WorkerScope.h',
+    'workers': True,
+    'concrete': False,
+    'implicitJSContext': [
+        'close', 'importScripts',
+    ],
+},
+
 'WorkerLocation': {
     'headerFile': 'mozilla/dom/workers/bindings/Location.h',
     'workers': True,
 },
-
-'WorkerMessagePort': [{
-    'nativeType': 'mozilla::dom::workers::MessagePort',
-    'headerFile': 'mozilla/dom/workers/bindings/MessagePort.h',
-    'implicitJSContext': [ 'postMessage' ],
-    'binaryNames': {
-        'postMessage': 'postMessageMoz',
-    },
-},
-{
-    'nativeType': 'mozilla::dom::workers::WorkerMessagePort',
-    'headerFile': 'mozilla/dom/workers/bindings/WorkerMessagePort.h',
-    'workers': True,
-    'nativeOwnership': 'worker',
-    'binaryNames': {
-        'postMessage': 'postMessageMoz',
-    },
-}],
 
 'WorkerNavigator': {
     'headerFile': 'mozilla/dom/workers/bindings/Navigator.h',
@@ -1499,7 +1485,6 @@ DOMInterfaces = {
 },
 {
     'workers': True,
-    'nativeOwnership': 'worker',
     # XXXkhuey responseXML returns Document? which boils down to a JSObject*
     # on a worker, and nsRefPtr<JSObject> fails in the expected way. channel is
     # similar.  This is ugly but it's all going away soon anyways.
@@ -1508,17 +1493,11 @@ DOMInterfaces = {
     ]
 }],
 
-'XMLHttpRequestEventTarget': [
-{
+'XMLHttpRequestEventTarget': {
     'nativeType': 'nsXHREventTarget',
     'headerFile': 'nsXMLHttpRequest.h',
     'concrete': False
 },
-{
-    'workers': True,
-    'nativeOwnership': 'worker',
-    'concrete': False,
-}],
 
 'XMLHttpRequestUpload': [
 {
@@ -1527,7 +1506,6 @@ DOMInterfaces = {
 },
 {
     'workers': True,
-    'nativeOwnership': 'worker',
 }],
 
 'XMLSerializer': {
