Bug 932505 - Add some basic checking for Bindings.conf r=bz
UltraBlame original commit: f39d5c1d8ea812021701ae9d09fffcaa949aba69

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -77,6 +77,20 @@
 # when deciding what header includes to generate and should never have an
 # implementation generated for it.  This is only needed in special cases like
 # worker descriptors for objects that will never actually appear in workers.
+#
+# The value for an interface can be a list or a dictionary, which affects which
+# bindings are generated for that interface.
+# - If the value for the interface is just a record, then a single binding for
+#   will be generated using those settings.
+# - If it is a list with a single record which has 'workers':True, then that
+#   record will be used to generate bindings for workers, plus the default
+#   settings will be used to generate bindings for the main thread.
+# - If it is a list with two records, then one should have 'workers':True,
+#   and the other should have 'workers':False (or left unset). These will
+#   be used to generate bindings for workers and for mainthread, as you would
+#   expect.
+# Nothing else is allowed.  If you have a list with a single 'workers':False
+# entry, just make it not a list.
 
 DOMInterfaces = {
 
@@ -285,10 +299,9 @@ DOMInterfaces = {
     'workers': True,
 },
 
-'DelayNode': [
-{
+'DelayNode': {
     'resultNotAddRefed': [ 'delayTime' ],
-}],
+},
 
 'DeviceMotionEvent': {
     'nativeType': 'nsDOMDeviceMotionEvent',
@@ -649,10 +662,9 @@ DOMInterfaces = {
     'workers': True,
 }],
 
-'ImageData': [
-{
+'ImageData': {
     'wrapperCache': False,
-}],
+},
 
 'InputStream': [
 {
@@ -862,10 +874,9 @@ DOMInterfaces = {
     'resultNotAddRefed': [ 'item' ]
 },
 
-'PannerNode': [
-{
+'PannerNode': {
     'resultNotAddRefed': [ 'coneGain', 'distanceGain' ],
-}],
+},
 
 'PeerConnectionImpl': {
     'nativeType': 'sipcc::PeerConnectionImpl',
