Bug 929797 - Implement proper memory reporting for child processes.  r=khuey.
UltraBlame original commit: cca1dea21a0de0459754c22c665ba44e4eafb5f3

--- a/toolkit/components/aboutmemory/tests/chrome.ini
+++ b/toolkit/components/aboutmemory/tests/chrome.ini
@@ -10,6 +10,7 @@ support-files =
 [test_aboutmemory2.xul]
 [test_aboutmemory3.xul]
 [test_aboutmemory4.xul]
+[test_aboutmemory5.xul]
 [test_memoryReporters.xul]
 [test_memoryReporters2.xul]
 [test_sqliteMultiReporter.xul]
