Bug 934206 - Disable browser_248970_b_perwindowpb.js for leaking r=ehsan
From 77547f79a335d3e84c717ea8757f59f06007900b Mon Sep 17 00:00:00 2001

UltraBlame original commit: 32906621f79b8a3429597ac0dc85c5c489c2279e

--- a/browser/components/sessionstore/test/browser.ini
+++ b/browser/components/sessionstore/test/browser.ini
@@ -59,6 +59,9 @@ support-files =
 [browser_upgrade_backup.js]
 [browser_windowRestore_perwindowpb.js]
 [browser_248970_b_perwindowpb.js]
+# Disabled because of leaks.
+# Re-enabling and rewriting this test is tracked in bug 936919.
+skip-if = true
 [browser_339445.js]
 [browser_345898.js]
 [browser_346337.js]
