Bug 915350 - Disable testBookmark due to intermittent failures.
UltraBlame original commit: f606614e2359f08c51e6733ace0c51622b93ecc9

--- a/mobile/android/base/tests/robocop.ini
+++ b/mobile/android/base/tests/robocop.ini
@@ -1,6 +1,6 @@
 [testAwesomebar]
 # [testAwesomebarSwipes] # disabled on fig - bug 880060
-[testBookmark]
+# [testBookmark] # see bug 915350
 [testBookmarksPage]
 [testBookmarkFolders]
 # [testBookmarklets] # see bug 915350
