Bug 913254 - Disable testReaderMode due to intermittent failures.
UltraBlame original commit: 5ef4a45698ea8b48eae5a73620c73e0336ac5b15

--- a/mobile/android/base/tests/robocop.ini
+++ b/mobile/android/base/tests/robocop.ini
@@ -59,9 +59,9 @@ skip-if = processor == "x86"
 [testMasterPassword]
 [testDeviceSearchEngine]
 [testPrivateBrowsing]
-[testReaderMode]
+# [testReaderMode] # see bug 913254
 # disabled on x86 only; bug 936224
-skip-if = processor == "x86"
+# skip-if = processor == "x86"
 [testGetUserMedia]
 [testHomeBanner]
 
