Bug 937024 followup: use -o rather than > per glandium's advice, rs=bustage
UltraBlame original commit: 650572c94814ccb42b3cd3c2bb8ec46569eadfff

--- a/browser/themes/linux/Makefile.in
+++ b/browser/themes/linux/Makefile.in
@@ -16,11 +16,11 @@ tab-selected-svg: $(srcdir)/../shared/tab-selected.svg
 	$(call py_action,preprocessor, \
 	  --marker "%" -D TAB_SIDE=start \
 	  $(ACDEFINES) \
-	  $(srcdir)/../shared/tab-selected.svg > tab-selected-start.svg)
+	  $(srcdir)/../shared/tab-selected.svg -o tab-selected-start.svg)
 	$(call py_action,preprocessor, \
 	  --marker "%" -D TAB_SIDE=end \
 	  $(ACDEFINES) \
-	  $(srcdir)/../shared/tab-selected.svg > tab-selected-end.svg)
+	  $(srcdir)/../shared/tab-selected.svg -o tab-selected-end.svg)
 
 .PHONY: tab-selected-svg
 
