--- a/browser/themes/windows/Makefile.in
+++ b/browser/themes/windows/Makefile.in
@@ -14,22 +14,22 @@ INSTALL_TARGETS += ICON
 # the processing of the jar file in this directory.
 tab-selected-svg: $(srcdir)/../shared/tab-selected.svg
 	$(call py_action,preprocessor, \
-	  --marker "%" -D TAB_SIDE=start \
+	  --marker % -D TAB_SIDE=start \
 	  $(ACDEFINES) \
-	  $(srcdir)/../shared/tab-selected.svg > tab-selected-start.svg)
+	  $(srcdir)/../shared/tab-selected.svg -o tab-selected-start.svg)
 	$(call py_action,preprocessor, \
-	  --marker "%" -D TAB_SIDE=end \
+	  --marker % -D TAB_SIDE=end \
 	  $(ACDEFINES) \
-	  $(srcdir)/../shared/tab-selected.svg > tab-selected-end.svg)
+	  $(srcdir)/../shared/tab-selected.svg -o tab-selected-end.svg)
 # Same as above for aero.
 	$(call py_action,preprocessor, \
-	  --marker "%" -D TAB_SIDE=start -D WINDOWS_AERO \
+	  --marker % -D TAB_SIDE=start -D WINDOWS_AERO \
 	  $(ACDEFINES) \
-	  $(srcdir)/../shared/tab-selected.svg > tab-selected-start-aero.svg)
+	  $(srcdir)/../shared/tab-selected.svg -o tab-selected-start-aero.svg)
 	$(call py_action,preprocessor, \
-	  --marker "%" -D TAB_SIDE=end -D WINDOWS_AERO \
+	  --marker % -D TAB_SIDE=end -D WINDOWS_AERO \
 	  $(ACDEFINES) \
-	  $(srcdir)/../shared/tab-selected.svg > tab-selected-end-aero.svg)
+	  $(srcdir)/../shared/tab-selected.svg -o tab-selected-end-aero.svg)
 
 .PHONY: tab-selected-svg
 
