Bug 928195 - Part 3: Consolidate all WebIDL Python logic into mozwebidl module; r=bz, froydnj
UltraBlame original commit: c0e8f2c0465f8954f5516c63f63095706d432d59

--- a/dom/bindings/Makefile.in
+++ b/dom/bindings/Makefile.in
@@ -90,6 +90,8 @@ globalgen_headers_DEST = $(ABS_DIST)/include/mozilla/dom
 globalgen_headers_TARGET := export
 INSTALL_TARGETS += globalgen_headers
 
+PYTHON_UNIT_TESTS += $(srcdir)/mozwebidl/test/test_mozwebidl.py
+
 include $(topsrcdir)/config/rules.mk
 
 ifdef GNU_CC
